--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
         </div>
         <div>
           <label for="category">category:</label>
-          <input type="text" id="category">
+          <select name="cars" id="category" >
+            <option value="volvo"></option>
+              <option value="Education">Education</option>
+              <option value="Entertainment">Entertainment</option>
+              <option value="Shopping">Shopping</option>
+              <option value="Miscellaneous">Miscellaneous</option>
+          </select>
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
